# netbox-proxmox-ingester

./: .gitignore  README.md  ingester.py  json-sample.json  pyproject.toml  sample_implementation.py  test-harness.py
.github/: funding.yml  sponsor.yml
netbox_proxmox_ingester/models/: vm.py
sample-data/: clusters.json  node_vms.json  nodes.json  proxmox_tree.json  vm_config.json  vm_fsinfo.json  vm_network_interfaces.json
sample-implementation/: README.md  sample-requirements.txt  sample_implementation.py
src/: test_harness.py
src/proxmox/: nodes.py  vms.py
